Consolidate player removal and centralize heartbeat in WebSocket handler